--- a/exam_problems/ep-5.tex
+++ b/exam_problems/ep-5.tex
@@ -453,7 +453,7 @@ $\bar{t}_{\text{СМО}}$-  среднее время в системе.
 	$$
 
 	$$
-		\bar{r}=\nu \frac{r_n}{(1-\nu^2)}
+		\bar{r}=\nu \frac{r_n}{(1-\nu)^2}
 		=\frac{9}{10} \frac{\frac{81}{950}}{(1-\frac{9}{10})^2}
 		=\frac{729}{95}
 	$$
@@ -569,16 +569,72 @@ $\bar{t}_{\text{СМО}}$-  среднее время в системе.
 	(01.7)
 
 	Найти среднее время пребывания заявки в СМО $(M|M|2)$,
-	если в СМО в всреднем поступает 60 заявок в час,
+	если в СМО в среднем поступает 60 заявок в час,
 	а среднее время обслуживания одним прибором одной заявки равно 1 минуте.
 \end{condition}
 
 \begin{solution}
 
+	$(M|M|2|\infty)$,
+	$T_{\text{обсл}}=1 \text{мин} = \frac{1}{60} \text{час}$ ,
+	$\mu=\frac{1}{T_{\text{обсл}}}=60 \text{клиентов в час}$,
+	$\lambda=60$,
+	$\rho=\frac{\lambda}{\mu}=1$,
+	$\nu=\frac{\lambda}{n \mu} = \frac{1}{2}$
+
+	$$
+		\begin{aligned}
+			r_0 & =\left(
+			\sum_{k=0}^{n-1}\frac{\rho^k}{k!}+\frac{\rho^n}{n!}\frac{1}{1-\nu}
+			\right)^{-1}
+			=\left(
+			\sum_{k=0}^{1}\frac{\rho^k}{k!}+\frac{\rho^2}{2!}\frac{1}{1-\nu}
+			\right)^{-1}
+			=\left(
+			1+ \rho + \frac{\rho^2}{2}\frac{1}{1-\nu}
+			\right)^{-1}
+			\\ & =\left(
+			1+ 1 + \frac{1^2}{2}\frac{1}{1-\frac{1}{2}}
+			\right)^{-1}
+			=\left(
+			3
+			\right)^{-1}
+			=\frac{1}{3}
+		\end{aligned}
+	$$
+
+	$$
+		r_n=\frac{\rho^n}{n!}r_0
+		=\frac{1^2}{2!} \frac{1}{3}
+		=\frac{1}{6}
+	$$
+
+	$$
+		\bar{k}=\rho
+		=1
+	$$
+
+	$$
+		\bar{r}=\nu \frac{r_n}{(1-\nu)^2}
+		=\frac{1}{2} \frac{\frac{1}{6}}{(1-\frac{1}{2})^2}
+		=\frac{1}{3}
+	$$
+
+	$$
+		\bar{z}=\bar{k}+ \bar{r}
+		=1 + \frac{1}{3}
+		= \frac{4}{3}
+	$$
+
+	$$
+		\bar{t}_{\text{СМО}}=\frac{\bar{z}}{\lambda}
+		= \frac{\frac{4}{3}}{60}
+		= \frac{1}{45}
+	$$
 \end{solution}
 
 \begin{conclusion}
-
+	$$\bar{t}_{\text{СМО}}=\frac{1}{45}$$
 \end{conclusion}
 
 \end{problem}
