--- a/exam_problems/ep-4.tex
+++ b/exam_problems/ep-4.tex
@@ -1,5 +1,43 @@
 \section{Динамическая система (наиболее вероятный тип задачи)}
 
+\subsection*{Общая теория}
+
+$$
+	cos(\pi k) = (-1)^k
+$$
+
+$$
+	(1-(-1)^k) f(x)
+	=
+	\begin{cases}
+		2 f(x), & k = 2m+1, \\
+		0,      & k = 2m.
+	\end{cases}
+$$
+
+$$
+	\int_{0}^{\infty} e^{a\tau} \, = \frac{1}{a}
+$$
+
+$$
+	\int_{0}^{\infty} \tau e^{-a \tau} \, d\tau = \frac{1}{a^2}
+$$
+
+$$
+	\int_{0}^{\infty} e^{-a\tau} \cos(\omega \tau) \, d\tau = \frac{a}{a^2+\omega^2}
+$$
+
+$$
+	\int_{0}^{\infty} \tau  e^{-a\tau} \cos(\omega \tau) \, d\tau = \frac{a^2+\omega^2}{(a^2+\omega^2)^2}
+$$
+
+
+$$
+
+$$
+
+
+\subsection*{Задачи}
 
 \begin{problem}
 
@@ -10,6 +48,14 @@
 	случайного процесса
 	$K_X(\tau)=2e^{-5|\tau|}$
 \end{condition}
+
+\begin{solution}
+
+\end{solution}
+
+\begin{conclusion}
+
+\end{conclusion}
 
 \end{problem}
 
@@ -26,6 +72,14 @@
 	$G=3$.
 	Найти корреляционную функцию процесса $Y(t)$ на выходе.
 \end{condition}
+
+\begin{solution}
+
+\end{solution}
+
+\begin{conclusion}
+
+\end{conclusion}
 
 \end{problem}
 
@@ -44,6 +98,14 @@
 	Найти корреляционную функцию процесса $Y(t)$ на выходе.
 \end{condition}
 
+\begin{solution}
+
+\end{solution}
+
+\begin{conclusion}
+
+\end{conclusion}
+
 \end{problem}
 
 
@@ -57,6 +119,14 @@
 	$S^*(\omega)=\frac{2}{\pi(\omega^2+25)}$.
 	Найти корреляционную функцию.
 \end{condition}
+
+\begin{solution}
+
+\end{solution}
+
+\begin{conclusion}
+
+\end{conclusion}
 
 \end{problem}
 
@@ -74,6 +144,14 @@
 	Найти корреляционную функцию процесса $Y(t)$ на выходе.
 \end{condition}
 
+\begin{solution}
+
+\end{solution}
+
+\begin{conclusion}
+
+\end{conclusion}
+
 \end{problem}
 
 
@@ -88,6 +166,14 @@
 	стационарного случайного процесса $X(t)$ найти его дисперсию.
 \end{condition}
 
+\begin{solution}
+
+\end{solution}
+
+\begin{conclusion}
+
+\end{conclusion}
+
 \end{problem}
 
 
@@ -100,5 +186,13 @@
 	Дана спектральная плотность стационарного процесса
 	$S^*(\omega)=\frac{3}{\pi(9+\omega^2)}$
 \end{condition}
+
+\begin{solution}
+
+\end{solution}
+
+\begin{conclusion}
+
+\end{conclusion}
 
 \end{problem}
