--- a/exam_problems/ep-1.tex
+++ b/exam_problems/ep-1.tex
@@ -8,7 +8,7 @@
 	Даны интенсивности марковского процесса с тремя состояниями:
 	$\lambda_{12}=\lambda_{21}=\lambda_{32}=0$,
 	$\lambda_{13}=1$, $\lambda_{23}=2$, $\lambda_{31}=3$.
-	Найти стационарное распределение вероятностей.
+	Построить граф процесса, составить уравнения Колмогорова для вероятностей состояний, найти стационарное распределение вероятностей.
 \end{condition}
 
 \begin{solution}
@@ -75,7 +75,7 @@
 	Даны интенсивности марковского процесса с тремя состояниями:
 	$\lambda_{12}=\lambda_{23}=\lambda_{31}=2$,
 	$\lambda_{13}=1$
-	Найти стационарное распределение вероятностей.
+	Построить граф процесса, составить уравнения Колмогорова для вероятностей состояний, найти стационарное распределение вероятностей.
 \end{condition}
 
 \begin{solution}
@@ -142,7 +142,7 @@
 	Даны интенсивности марковского процесса с тремя состояниями:
 	$\lambda_{23}=\lambda_{32}=2$,
 	$\lambda_{13}=\lambda_{21}=3$
-	Найти стационарное распределение вероятностей.
+	Построить граф процесса, составить уравнения Колмогорова для вероятностей состояний, найти стационарное распределение вероятностей.
 \end{condition}
 
 \begin{solution}
@@ -210,7 +210,7 @@
 	$\lambda_{31}=\lambda_{32}=1$,
 	$\lambda_{13}=\lambda_{23}=3$,
 	$\lambda_{21}=\lambda_{12}=2$.
-	Найти стационарное распределение вероятностей.
+	Построить граф процесса, составить уравнения Колмогорова для вероятностей состояний, найти стационарное распределение вероятностей.
 \end{condition}
 
 \begin{solution}
@@ -283,7 +283,7 @@
 	Даны интенсивности марковского процесса с тремя состояниями:
 	$\lambda_{21}=\lambda_{23}=1$,
 	$\lambda_{13}=3$, $\lambda_{32}=2$
-	Найти стационарное распределение вероятностей.
+	Построить граф процесса, составить уравнения Колмогорова для вероятностей состояний, найти стационарное распределение вероятностей.
 \end{condition}
 
 \begin{solution}
@@ -350,7 +350,7 @@
 	Даны интенсивности марковского процесса с тремя состояниями:
 	$\lambda_{13}=8$, $\lambda_{21}=1$, $\lambda_{23}=2$,
 	$\lambda_{31}=5$, $\lambda_{32}=3$.
-	Найти стационарное распределение вероятностей.
+	Построить граф процесса, составить уравнения Колмогорова для вероятностей состояний, найти стационарное распределение вероятностей.
 \end{condition}
 
 \begin{solution}
@@ -417,7 +417,7 @@
 	Даны интенсивности марковского процесса с тремя состояниями:
 	$\lambda_{12}=\lambda_{31}=1$, $\lambda_{13}=5$,
 	$\lambda_{23}=3$, $\lambda_{21}=\lambda_{32}=2$.
-	Найти стационарное распределение вероятностей.
+	Построить граф процесса, составить уравнения Колмогорова для вероятностей состояний, найти стационарное распределение вероятностей.
 \end{condition}
 
 \begin{solution}
