--- a/exam_problems/ep-4.tex
+++ b/exam_problems/ep-4.tex
@@ -143,9 +143,6 @@ $$
 	S(\omega)=2\cdot S^*(\omega) = 2\cdot S^*(-\omega)
 $$
 
-------
-
-
 $$
 	K(\tau)=\int_{-\infty}^{+\infty} e^{i\omega \tau} S^*(\omega) \, d\omega
 $$
@@ -206,10 +203,50 @@ $$
 
 \begin{solution}
 
+	$$
+		K_X(\tau)=G\delta(\tau)=3\delta(\tau)
+		\Rightarrow
+		S_X^*(\omega)=\frac{G}{2\pi}=\frac{3}{2\pi}
+	$$
+
+	$$
+		A(p)=3p-6=3(p-2),
+		B(p)=p^2+p-6=(p+3)(p-2)
+	$$
+
+	$$
+		T(p)=\frac{A(p)}{B(p)}
+		=\frac{3(p-2)}{(p+3)(p-2)}
+		=\frac{3}{p+3}
+	$$
+
+	$$
+		|T(i\omega)|^2=T(i\omega)\cdot \bar{T(i\omega)}
+		=\frac{3}{i\omega+3}\cdot\frac{3}{(-i\omega)+3}
+		=\frac{9}{3^2-(i\omega)^2}
+		=\frac{9}{3^2+\omega^2}
+	$$
+
+	$$
+		S_Y^*(\omega)=|T(i\omega)|^2 S_X^*(\omega)
+		=\frac{9}{3^2+\omega^2} \frac{3}{2\pi}
+	$$
+
+	$$
+		\begin{aligned}
+			K_Y(\tau) & =\int_{-\infty}^{+\infty} e^{i\omega \tau} S^*(\omega) \, d\omega
+			=\int_{-\infty}^{+\infty} e^{i\omega \tau} \frac{9}{3^2+\omega^2} \frac{3}{2\pi} \, d\omega
+			=\frac{27}{2\pi} \int_{-\infty}^{+\infty} e^{i\omega \tau} \frac{1}{3^2+\omega^2} \, d\omega
+			\\ &=\frac{27}{2\pi} \frac{\pi}{3} e^{-3|\tau|}
+			=\frac{9}{2}  e^{-3|\tau|}
+		\end{aligned}
+	$$
+
 \end{solution}
 
 \begin{conclusion}
 
+	$$K_Y(\tau) =\frac{9}{2}  e^{-3|\tau|}$$
 \end{conclusion}
 
 \end{problem}
