--- a/exam_problems/ep-1.tex
+++ b/exam_problems/ep-1.tex
@@ -1,5 +1,11 @@
 \section{Интенсивности марковского процесса}
 
+\subsection*{Общая теория}
+
+Стол прозрачный, граф квадратный.
+
+\subsection*{Задачи}
+
 \begin{problem}
 
 \begin{condition}
