--- a/exam_problems/ep-4.tex
+++ b/exam_problems/ep-4.tex
@@ -3,7 +3,7 @@
 \subsection*{Общая теория}
 
 $$
-	\int_{0}^{\infty} e^{a\tau} \, = \frac{1}{a}
+	\int_{0}^{\infty} e^{-a\tau} \, = \frac{1}{a}
 $$
 
 $$
@@ -38,7 +38,7 @@ $$
 $$
 
 $$
-	\int_{-\infty}^{+\infty} e^{i\omega\tau} \frac{1}{\omega^2+a^2}
+	\int_{-\infty}^{+\infty} e^{i\omega\tau} \frac{1}{\omega^2+a^2} \, d\omega
 	=\left[2\pi i \cdot Rez(f,i a)\right]
 	=\left[2\pi i \cdot \frac{e^{-a\tau}}{2\cdot i a}\right]
 	=\frac{\pi}{a} e^{-a|\tau|}
@@ -64,7 +64,7 @@ $$
 $$
 
 $$
-	\int_{-\infty}^{+\infty} e^{i\omega\tau} \frac{1}{\omega^2+a^2}
+	\int_{-\infty}^{+\infty} e^{i\omega\tau} \frac{1}{\omega^2+a^2}\, d\omega
 	=\left[2\pi i \cdot Rez(f,i a)\right]
 	=\left[2\pi i \cdot \frac{1}{2\cdot i a}\right]
 	=\frac{\pi}{a}
@@ -92,7 +92,7 @@ $$
 $$
 
 $$
-	\int_{-\infty}^{+\infty} e^{i\omega\tau} \frac{1}{\omega^2+a^2}
+	\int_{-\infty}^{+\infty} e^{i\omega\tau} \frac{1}{\omega^2+a^2} \, d\omega
 	=\left[2\pi i \cdot Rez(f,i a)\right]
 	=\left[2\pi i \cdot \frac{1}{4ia^3}\right]
 	=\frac{pi}{2a^3}
@@ -123,7 +123,7 @@ $$
 $$
 
 $$
-	\int_{-\infty}^{+\infty} e^{i\omega\tau} \frac{1}{\omega^2+a^2}
+	\int_{-\infty}^{+\infty} e^{i\omega\tau} \frac{1}{\omega^2+a^2} \, d\omega
 	=\left[2\pi i \cdot Rez(f,i a)\right]
 	=\left[2\pi i \cdot \frac{1}{4ia}\right]
 	=\frac{\pi}{2a}
