--- a/exam_problems/ep-4.tex
+++ b/exam_problems/ep-4.tex
@@ -15,7 +15,7 @@ $$
 $$
 
 $$
-	\int_{0}^{\infty} \tau  e^{-a\tau} \cos(\omega \tau) \, d\tau = \frac{a^2+\omega^2}{(a^2+\omega^2)^2}
+	\int_{0}^{\infty} \tau  e^{-a\tau} \cos(\omega \tau) \, d\tau = \frac{a^2-\omega^2}{(a^2+\omega^2)^2}
 $$
 
 \textbf{Формула Выч1:}
