--- a/exam_problems/ep-2.tex
+++ b/exam_problems/ep-2.tex
@@ -344,9 +344,86 @@
 
 \begin{solution}
 
+	$$
+		P =
+		\begin{pmatrix}
+			\frac{1}{2} & 0           & \frac{1}{2} \\
+			0           & \frac{1}{5} & \frac{4}{5} \\
+			\frac{1}{2} & 0           & \frac{1}{2}
+		\end{pmatrix}.
+	$$
+
+	$$
+		\vec{p}(2)=\vec{p}(0)P^2
+		=(1;0;0)P^2.
+	$$
+
+	$$
+		\vec{p}(1)=\vec{p}(0)P
+		=(1;0;0)
+		\begin{pmatrix}
+			\frac{1}{2} & 0           & \frac{1}{2} \\
+			0           & \frac{1}{5} & \frac{4}{5} \\
+			\frac{1}{2} & 0           & \frac{1}{2}
+		\end{pmatrix}
+		=\left(\frac{1}{2};0;\frac{1}{2}\right).
+	$$
+
+	$$
+		\vec{p}(2)=\vec{p}(1)P
+		=\left(\frac{1}{2};0;\frac{1}{2}\right)
+		\begin{pmatrix}
+			\frac{1}{2} & 0           & \frac{1}{2} \\
+			0           & \frac{1}{5} & \frac{4}{5} \\
+			\frac{1}{2} & 0           & \frac{1}{2}
+		\end{pmatrix}
+		=\left(\frac{1}{2};0;\frac{1}{2}\right).
+	$$
+
+	$$
+		\bar r=(r_1,r_2,r_3), \qquad \bar r P=\bar r, \qquad r_1+r_2+r_3=1.
+	$$
+
+	$$
+		\begin{cases}
+			r_1=\frac{1}{2}r_1+\frac{1}{2}r_3, \\
+			r_2=\frac{1}{5}r_2,                \\
+			r_3=\frac{1}{2}r_1+\frac{1}{2}r_3, \\
+			r_1+r_2+r_3=1.
+		\end{cases}
+		\Rightarrow
+		\begin{cases}
+			2r_1=r_1+r_3, \\
+			5r_2=r_2,     \\
+			2r_3=r_1+r_3, \\
+			r_1+r_2+r_3=1.
+		\end{cases}
+	$$
+
+	$$
+		\begin{cases}
+			r_1=r_3, \\
+			r_2=0,   \\
+			r_1+r_3=1.
+		\end{cases}
+	$$
+
+	$$
+		r_1=r_3=\frac{1}{2}.
+	$$
+
+	$$
+		\bar r=\left(\frac{1}{2};0;\frac{1}{2}\right).
+	$$
+
 \end{solution}
 
 \begin{conclusion}
+
+	$$
+		\vec{p}(2)=\left(\frac{1}{2};0;\frac{1}{2}\right),
+		\bar r=\left(\frac{1}{2};0;\frac{1}{2}\right).
+	$$
 
 \end{conclusion}
 
