--- a/exam_problems/ep-2.tex
+++ b/exam_problems/ep-2.tex
@@ -437,7 +437,7 @@
 	(11.1)
 
 	В цепи Маркова дана матрица $P$ вероятностей перехода за один шаг:
-	$p_{11}=0.25$,$p_{12}=p_{33}=p_{21}=0$,
+	$p_{11}=0.25$, $p_{12}=p_{33}=p_{21}=0$,
 	$p_{22}=0.4$, $p_{31}=0.5$
 	и начальное распределение вероятностей состояний $\vec{p}(0)=(0;1;0)$.
 	Построить граф цепи Маркова, найти $\vec{p}(2)$ и стационарное распределение.
@@ -445,9 +445,94 @@
 
 \begin{solution}
 
+	$$
+		P =
+		\begin{pmatrix}
+			\frac{1}{4} & 0           & \frac{3}{4} \\
+			0           & \frac{2}{5} & \frac{3}{5} \\
+			\frac{1}{2} & \frac{1}{2} & 0
+		\end{pmatrix}.
+	$$
+
+	$$
+		\vec{p}(2)=\vec{p}(0)P^2
+		=(0;1;0)P^2.
+	$$
+
+	$$
+		\vec{p}(1)=\vec{p}(0)P
+		=(0;1;0)
+		\begin{pmatrix}
+			\frac{1}{4} & 0           & \frac{3}{4} \\
+			0           & \frac{2}{5} & \frac{3}{5} \\
+			\frac{1}{2} & \frac{1}{2} & 0
+		\end{pmatrix}
+		=\left(0;\frac{2}{5};\frac{3}{5}\right).
+	$$
+
+	$$
+		\vec{p}(2)=\vec{p}(1)P
+		=\left(0;\frac{2}{5};\frac{3}{5}\right)
+		\begin{pmatrix}
+			\frac{1}{4} & 0           & \frac{3}{4} \\
+			0           & \frac{2}{5} & \frac{3}{5} \\
+			\frac{1}{2} & \frac{1}{2} & 0
+		\end{pmatrix}
+		=\left(\frac{3}{10};\frac{23}{50};\frac{6}{25}\right).
+	$$
+
+	$$
+		\bar r=(r_1,r_2,r_3), \qquad \bar r P=\bar r, \qquad r_1+r_2+r_3=1.
+	$$
+
+	$$
+		\begin{cases}
+			r_1=\frac{1}{4}r_1+\frac{1}{2}r_3, \\
+			r_2=\frac{2}{5}r_2+\frac{1}{2}r_3, \\
+			r_3=\frac{3}{4}r_1+\frac{3}{5}r_2, \\
+			r_1+r_2+r_3=1.
+		\end{cases}
+		\Rightarrow
+		\begin{cases}
+			4r_1=r_1+2r_3,                     \\
+			5r_2=2r_2+\frac{5}{2}r_3,          \\
+			r_3=\frac{3}{4}r_1+\frac{3}{5}r_2, \\
+			r_1+r_2+r_3=1.
+		\end{cases}
+	$$
+
+	$$
+		\begin{cases}
+			3r_1=2r_3, \\
+			6r_2=5r_3, \\
+			r_1+r_2+r_3=1.
+		\end{cases}
+		\Rightarrow
+		\begin{cases}
+			r_1=\frac{2}{3}r_3, \\
+			r_2=\frac{5}{6}r_3, \\
+			r_1+r_2+r_3=1.
+		\end{cases}
+	$$
+
+	$$
+		r_3\left(\frac{2}{3}+\frac{5}{6}+1\right)=1
+		\Rightarrow
+		r_3=\frac{2}{5}.
+	$$
+
+	$$
+		\bar r=\left(\frac{4}{15};\frac{1}{3};\frac{2}{5}\right).
+	$$
+
 \end{solution}
 
 \begin{conclusion}
+
+	$$
+		\vec{p}(2)=\left(\frac{3}{10};\frac{23}{50};\frac{6}{25}\right),
+		\bar r=\left(\frac{4}{15};\frac{1}{3};\frac{2}{5}\right).
+	$$
 
 \end{conclusion}
 
